# random-json

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASES.md  USAGE.md  build.rs  dist-workspace.toml  faker_api.txt  rustfmt.toml  typos.toml
.github/workflows/: build.yml  clippy.yml  docs.yml  fmt.yml  rustdoc.yml  rustfmt.yml  spelling.yml  taplo.yml  tests.yml
docs/: USAGE.md
src/: clap.rs  data.rs  data_generator.rs  dialog.rs  errors.rs  generator.rs  generator_trait.rs  macros.rs  main.rs
src/data/: generate.rs  macros.rs  mod.rs
src/dialog/: generate.rs  mod.rs  range.rs
src/dialogue/: generate.rs  mod.rs
src/json/: generate.rs  generator.rs  mod.rs
src/tests/: mod.rs
