[package]
name = "fake-json"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to generate random data from a JSON schema to fill databases."
license = "MIT or Apache-2.0"
repository = "https://github.com/t-webber/fake-json"
authors = ["Tom Webber <t.c.w.webber@gmail.com>"]
keywords = ["fake", "json", "cli", "data generation"]
categories = [
  "Command line utilities",
  "Database interfaces",
  "Development tools",
  "Configuration",
]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.41", features = [] }
clap = { version = "4.5.42", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
rand = "0.9.2"
random-data = { git = "https://github.com/t-webber/random-data", version = "0.1.0" }
serde_json = "1.0.142"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
