[package]
name = "random-json"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to generate random data from a JSON schema to fill databases."
license = "MIT OR Apache-2.0"
repository = "https://github.com/t-webber/fake-json"
authors = ["Tom Webber <t.c.w.webber@gmail.com>"]
keywords = ["random", "data-generation", "fake-data", "json", "cli"]
categories = [
  "command-line-interface",
  "command-line-utilities",
  "config",
  "database",
  "development-tools",
]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.41", features = [] }
clap = { version = "4.5.42", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
rand = "0.9.2"
random-data = "0.1.0"
serde_json = "1.0.142"
